responsice padding fixed on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2392,7 +2392,7 @@
 
 			.feature-list p {
 				margin: 0 0 0 48px;
-				padding-bottom: 100%;
+				padding-bottom: 25%;
 			}
 
 		/* Box */
